--- a/portfolio.html
+++ b/portfolio.html
@@ -21,20 +21,22 @@
 
 <body>
     <!--Шапка сайта-->
-    <header class="basic">
-        <nav>
-            <a href="/" class="logo">Web<span class="black">Studio</span></a>
-            <ul class="basic-linc">
-                <li><a class="linc" href="./index.html">Студия</a></li>
-                <li><a class="linc current" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="linc" href="/">Контакты</a></li>
+    <div class="container">
+        <header class="basic">
+            <nav class="container-nav-page">
+                <a href="/" class="logo">Web<span class="black">Studio</span></a>
+                <ul class="basic-linc">
+                    <li><a class="linc current" href="./index.html">Студия</a></li>
+                    <li><a class="linc" href="./portfolio.html">Портфолио</a></li>
+                    <li><a class="linc " href="/">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="basic-linck">
+                <li><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="basic-linck">
-            <li><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-    </header>
+        </header>
+    </div>
     <!--Основа сайта-->
     <main>
         <section >
