--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <body>
         <!--Шапка сайта-->
-    <div class="container-page">
+    <div class="container">
         <header class="basic">
-            <nav>
+            <nav class="container-nav-page" >
                 <a  href="/" class="logo">Web<span class="black">Studio</span></a>
                 <ul class="basic-linc">
                     <li><a class="linc current" href="./index.html" >Студия</a></li>
@@ -36,33 +36,34 @@
     <!--Основа сайта-->
     <main>
         <!---Первая секция-->
-        <div >
+        <div>
             <section class="section-color-black">
                 <h1 class="section-title-h1">Эффективные решения <br> для вашего бизнеса</h1>
                 <button class="button" type="button">Заказать услугу</button>
             </section>
         </div>
         <!--Вторая секция-->
+        <div class="container">
             <section class="section">
                 <ul class="information">
                     <li>
                     <h3 class="main-information" >Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="main-information-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
 
                     <li>
                     <h3 class="main-information" >Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="main-information-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
 
                     <li>
                     <h3 class="main-information" >Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="main-information-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     
                     <li>
                     <h3 class="main-information" >Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="main-information-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
         <!--Картинки-->
@@ -75,6 +76,7 @@
                     <li> <img src="./images/img3.jpg" alt="Планшет" width="370"></li>
                 </ul>
             </section>
+        </div>
         <!-- Команда-->
             <section class="section-team">
                 <h2 class="section-title-h2">Наша команда</h2>
@@ -107,9 +109,9 @@
 
         <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
 
-        <ul class="basic-linck">
-            <li><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="basic-linck-footer">
+            <li><a class="linck-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="linck-footer" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </footer> 
     
