добавил бордер внизу хедера

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,23 +21,25 @@
 
 <body>
     <!--Шапка сайта-->
-    <div class="container-port">
-        <header class="basic">
-            <div class="basic-header">
-                <nav class="container-nav-page">
-                    <a href="/" class="logo">Web<span class="black ">Studio</span></a>
-                    <ul class="basic-linc">
-                        <li class="basic-li"><a class="linc" href="./index.html">Студия</a></li>
-                        <li class="basic-li"><a class="linc current " href="./portfolio.html">Портфолио</a></li>
-                        <li class="basic-li"><a class="linc" href="/">Контакты</a></li>
+    <div class="border " style="border-bottom-style: solid;">
+        <div class="container-port">
+            <header class="basic">
+                <div class="basic-header">
+                    <nav class="container-nav-page">
+                        <a href="/" class="logo">Web<span class="black ">Studio</span></a>
+                        <ul class="basic-linc">
+                            <li class="basic-li"><a class="linc" href="./index.html">Студия</a></li>
+                            <li class="basic-li"><a class="linc current " href="./portfolio.html">Портфолио</a></li>
+                            <li class="basic-li"><a class="linc" href="/">Контакты</a></li>
+                        </ul>
+                    </nav>
+                    <ul class="basic-linck">
+                        <li class="item"><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="item"><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
-                </nav>
-                <ul class="basic-linck">
-                    <li class="item"><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="item"><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </div>
-        </header>
+                </div>
+            </header>
+        </div>
     </div>
     <!--Основа сайта-->
     <main>
