--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header class="basic">
             <div class="basic-header">
                 <nav class="container-nav-page">
-                    <a href="/" class="logo">Web<span class="black">Studio</span></a>
+                    <a href="./index.html" class="logo">Web<span class="black">Studio</span></a>
                     <ul class="basic-linc">
                         <li class="basic-li"><a class="linc current" href="./index.html">Студия</a></li>
                         <li class="basic-li"><a class="linc" href="./portfolio.html">Портфолио</a></li>
@@ -116,7 +116,7 @@
     <footer class="footer-grey">
         <div class="container">
             <section class="footer-section">
-                <a href="/" class="logo">Web<span class="white">Studio</span></a>
+                <a href="./index.html" class="logo">Web<span class="white">Studio</span></a>
                 
                 <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
                 
