--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
                         </ul>
                     </nav>
                     <ul class="basic-linck">
-                        <li class="item"><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li class="item"><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        <li class="items"><a class="linck" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="items"><a class="linck" href="tel:+380961111111">+38 096 111 11 11</a></li>
                     </ul>
                 </div>
             </header>
