--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <!--Футер-->
     <footer class="footer-grey">
         <div class="container">
-            <section class="footer-section">
+            <section>
                 <a href="./index.html" class="logo">Web<span class="white">Studio</span></a>
                 
                 <address class="address">г. Киев, пр-т Леси Украинки, 26</address>
