--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
                 <nav class="container-nav-page">
                     <a href="./index.html" class="logo">Web<span class="black">Studio</span></a>
                     <ul class="basic-linc">
-                        <li class="basic-li"><a class="linc current" href="./index.html">Студия</a></li>
-                        <li class="basic-li"><a class="linc" href="./portfolio.html">Портфолио</a></li>
+                        <li class="basic-li"><a class="linc" href="./index.html">Студия</a></li>
+                        <li class="basic-li"><a class="linc current" href="./portfolio.html">Портфолио</a></li>
                         <li class="basic-li"><a class="linc " href="/">Контакты</a></li>
                     </ul>
                 </nav>
