немного падингов и центровка

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!---Первая секция-->
             <section class="section-color-black">
                 <div class="section-title-h1-button">
-                    <h1 class="section-title-h1">Эффективные решения <br> для вашего бизнеса</h1>
+                    <h1 class="section-title-h1">Эффективные решения для вашего бизнеса</h1>
                     <button class="button" type="button">Заказать услугу</button>
                 </div>  
             </section>
