--- a/portfolio.html
+++ b/portfolio.html
@@ -20,16 +20,17 @@
 </head>
 
 <body>
+    
     <!--Шапка сайта-->
     <header class="basic" style="border-bottom:1px solid #ECECEC;">
-        <div class="container-port">
+        <div class="container ">
             <div class="basic-header">
                 <nav class="container-nav-page">
                     <a href="./index.html" class="logo">Web<span class="black">Studio</span></a>
                     <ul class="basic-linc">
                         <li class="basic-li"><a class="linc" href="./index.html">Студия</a></li>
                         <li class="basic-li"><a class="linc current" href="./portfolio.html">Портфолио</a></li>
-                        <li class="basic-li"><a class="linc " href="/">Контакты</a></li>
+                        <li class="basic-li"><a class="linc" href="/">Контакты</a></li>
                     </ul>
                 </nav>
                 <ul class="basic-linck">
