добавил к img блок убрал нижнюю границу

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <div class="container">
                 <h2 class="section-title-h2">Чем мы занимаемся</h2>
                 <ul class="section-picture">
-                    <li><img src="./images/box1.jpg" alt="Клавиатура" width="370"></li>
+                    <li><img class="cards"  src="./images/box1.jpg" alt="Клавиатура" width="370"></li>
 
-                    <li><img src="./images/img2.jpg" alt="Телефон" width="370"></li>
+                    <li><img class="cards"  src="./images/img2.jpg" alt="Телефон" width="370"></li>
 
-                    <li> <img src="./images/img3.jpg" alt="Планшет" width="370"></li>
+                    <li> <img class="cards"  src="./images/img3.jpg" alt="Планшет" width="370"></li>
                 </ul>
             </div>
         </section>
@@ -93,14 +93,14 @@
                     <h2 class="section-title-h2">Наша команда</h2>
                     <ul class="section-people">
                         <li>
-                            <img src="./images/img1.jpg" alt="Product Designer" width="270">
+                            <img class="cards" src="./images/img1.jpg" alt="Product Designer" width="270">
                             <div class="people-description">
                                 <h3 class="section-team-h3">Игорь Демьяненко</h3>
                                 <p class="section-team-p">Product Designer</p>
                             </div>
                         </li>
                         <li>
-                            <img src="./images/img(2).jpg" alt="Frontend Developer" width="270">
+                            <img class="cards" src="./images/img(2).jpg" alt="Frontend Developer" width="270">
                             <div class="people-description">
                                 <h3 class="section-team-h3">Ольга Репина</h3>
                                 <p class="section-team-p">Frontend Developer</p>
@@ -108,7 +108,7 @@
                         </li>
                     
                         <li>
-                            <img src="./images/img(3).jpg" alt="Marketing" width="270">
+                            <img class="cards" src="./images/img(3).jpg" alt="Marketing" width="270">
                             <div class="people-description">
                                 <h3 class="section-team-h3">Николай Тарасов</h3>
                                 <p class="section-team-p">Marketing</p>
@@ -116,7 +116,7 @@
                         </li>
                     
                         <li>
-                            <img src="./images/img4.jpg" alt="UI Designer" width="270">
+                            <img class="cards" src="./images/img4.jpg" alt="UI Designer" width="270">
                             <div class="people-description">
                                 <h3 class="section-team-h3">Михаил Ермаков</h3>
                                 <p class="section-team-p">UI Designer</p>
