--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
                         </li>
                     
                         <li class="project-item"><img class="cards" src="./images/portfol9.jpg" alt="" width="370">
-                            <div class="project-description"></div>
+                            <div class="project-description">
                                 <h3 class="project-title">Growing Business</h3>
                                 <p>Приложение</a></p>
                             </div>
