--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
     <!--Основа сайта-->
     <main>
         <section class="section-port-image">
-            <div class="container">
+            <div class="container-port">
                 <ul class="button-grey-block">
                     <li><button class="button-grey" type="button">Все</button></li>
                     <li><button class="button-grey" type="button">Веб-сайты</button></li>
