--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
             <div class="container">
                 <h2 class="section-title-h2">Чем мы занимаемся</h2>
                 <ul class="section-picture">
-                    <li><img class="cards"  src="./images/box1.jpg" alt="Клавиатура" width="370"></li>
+                    <li class="image"><img class="cards"  src="./images/box1.jpg" alt="Клавиатура" width="370"></li>
 
-                    <li><img class="cards"  src="./images/img2.jpg" alt="Телефон" width="370"></li>
+                    <li class="image"><img class="cards"  src="./images/img2.jpg" alt="Телефон" width="370"></li>
 
-                    <li> <img class="cards"  src="./images/img3.jpg" alt="Планшет" width="370"></li>
+                    <li class="image"><img class="cards"  src="./images/img3.jpg" alt="Планшет" width="370"></li>
                 </ul>
             </div>
         </section>
